--- a/user_auth/templates/user_auth/staff_login.html
+++ b/user_auth/templates/user_auth/staff_login.html
@@ -18,7 +18,7 @@
         {% if error_message %}
             <p style="color: red;">{{ error_message }}</p>
         {% endif %}
-        <p><a href="#" class="forgot-password">Forgot your password?</a></p>
+        <p><a href="{% url 'user_auth:forgot-password' %}" class="forgot-password">Forgot your password?</a></p>
     </div>
 </section>
 {% endblock %}
